--- a/public_html/ArquivosHTML/ArquivosCSS/style_telaEmpresas.css
+++ b/public_html/ArquivosHTML/ArquivosCSS/style_telaEmpresas.css
@@ -1,8 +1,5 @@
-
-/* background: url('https://source.unsplash.com/twukN12EN7c/1920x1080') no-repeat center center fixed;*/
-/*background-color: #ffe0b5;*/
-body {
-   
+/*Background da página e configurações para que continuasse até o final*/
+body {  
   background: url(../imagens/listras.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -10,76 +7,46 @@ body {
   -o-background-size: cover;
 }
 
-header, .bg-light{
+/*Sobrescrever a cor do navbar*/
+.bg-light{
     background-image: linear-gradient(to right, #ff8c00, #fa8072);
 }
 
+/*Sobrescrever a cor dos links Hotmart e Oracle dentro navbar */
 .nav-link{
     color: whitesmoke
 }
 
-/*header,.bg-light ,.mt-1 {
-  margin-top: 100px;
-}
-*/
-
-/*espaçamento*/
+/*espaçamento do Título*/
 h1{
     margin-top: 25px;
-    margin-left: 25px; 
-    
+    margin-left: 25px;   
 }
 
-
+/*Espaçamento da div com 6 colunas pequenas*/
 .col-sm-6{
-    margin-top: 100px;
-    
+    margin-top: 100px;  
 }
+
+/*Dimensões das imagens dentro do carrossel*/
 .carousel-inner, .carousel-item active, .carousel-item{
     width: 350px;
     height: 400px;
-    /*margin-left: 180 px; */
-    margin: auto;
-  
+    margin: auto; 
 }
 
+/*Dimensões do video*/
 iframe{
     width: 400px;
-    
-    /*margin-left: 180 px; */
     margin: auto;
 }
 
-/*hr{
-    padding-top: 2cm;
-    margin-top: 50%;
-    border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, #ff8c00, #fa8072);
-}
-
-
-/* não esquecer de cuidar da responsividade do video tbm */
+/*Espaçamento correto da div que contem as informações do video e motivos*/
 .col-sm-4{
     margin-top: 100px;
-    margin-left: 100px;
-    
+    margin-left: 100px;  
 }
 
 
-/*hr{
-    
-  border-color:#aaa;
-  box-sizing:border-box;
-  margin-top: 100px;
-  width:100%; 
-  margin-top: 30px;
-}*/
 
-/*.hr3 {
-  margin-top: 50px;
-  border: 0;
-  height: 2px;
-  background-image: linear-gradient(to right, transparent, #CCC, transparent);  
-}*/
 
